# metamorphosis

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  default.nix  flake.nix  test.py
.github/workflows/: cmake.yml  latex.yml  tests.yml
cmake/: code_generation.cmake  executables.cmake  library.cmake  operations.cpp.patch  tests.cmake  third_party.cmake
doc/: queue_protocol.md  runtime.md
docker/: Dockerfile  build.sh  run.sh
nix/: build.nix  build_static.nix  latex.nix  source.nix  test.nix
paper/: .latexindent.yaml  annotation.tex  conclusion.tex  contents.tex  external.bib  introduction.tex  part1.tex  part2.tex  part3.tex  part4.tex  references.tex  thesis.tex  title.tex
protos/: echo_service.proto  messages.proto
rpc_generator/: rpc_client_base.cpp  rpc_client_base.h  rpc_generator.cpp
rpc_generator/lib/: rpc_client_base.cpp  rpc_client_base.h  rpc_handler_base.cpp  rpc_handler_base.h
scripts/: build-benchmark.sh  build-queue.sh  restore-deps.sh  restore_deps.sh  run-benchmark.sh  run-queue-client.sh  run-queue-service.sh  save_deps.sh
scripts/impl/: fix-gcc-compilation.sh
src/: CMakeLists.txt  client.cpp  client_fibers.cpp  server.cpp  server_fibers.cpp
src/async/: client.cpp  server.cpp
src/benchmark/: CMakeLists.txt  echo_service.proto  (+1 more)
src/metamorphosis/exe/: CMakeLists.txt  client.cpp  node.cpp
src/metamorphosis/node/: CMakeLists.txt  node.cpp  node.h
src/queue/: CMakeLists.txt  client.cpp  queue_service.proto  service.cpp
src/raft/: CMakeLists.txt  client.cpp  client.h  node.cpp  node.h  raft.proto  state_machine.cpp  state_machine.h  util.h
src/raft/client/: CMakeLists.txt  client.cpp  client.h
src/raft/node/: CMakeLists.txt  node.cpp  node.h  state_machine_wrapper.cpp  state_machine_wrapper.h
src/raft/test/: CMakeLists.txt  client.cpp  client_config.toml  node.cpp  node_config.toml  rsm.h  rsm_msg.proto
src/raft/test/exe/: CMakeLists.txt  client.cpp  node.cpp
src/raft/test/simulation_test/: CMakeLists.txt  hosts.h  raft_commit_index.cpp  raft_fuzztest.cpp  raft_host_crash.cpp  raft_simple.cpp
src/raft/test/system_test/: CMakeLists.txt  history_checker.cpp  requirements.txt  system_test.py
src/raft/test/util/: CMakeLists.txt  history_checker.cpp  history_checker.h  logging_state_machine.cpp  logging_state_machine.h
src/raft/ut/: CMakeLists.txt  history_checker.h  hosts.h  leader_election.cpp  raft.cpp  raft_commit_index.cpp  raft_host_crash.cpp  raft_simple.cpp  rsm.h  test_rsm.h  test_rsm.proto
src/runtime/: CMakeLists.txt  api.cpp  api.h  database.cpp  database.h  kv_storage.h  logger.cpp  logger.h  random.cpp  random.h  rpc_client_base.cpp  rpc_client_base.h  rpc_error.cpp  rpc_error.h  rpc_handler_base.cpp  rpc_handler_base.h  rpc_server.cpp  rpc_server.h  rpc_service_base.cpp  rpc_service_base.h  task.h  time.h
src/runtime/cancellation/: CMakeLists.txt  stop_callback.cpp  stop_callback.h  stop_source.cpp  stop_source.h  stop_state.cpp  stop_state.h  stop_token.cpp
src/runtime/cancellation/ut/: CMakeLists.txt  cancellation.cpp
src/runtime/grpc/: CMakeLists.txt  api.cpp  rpc_client_base.cpp  rpc_client_base.h  rpc_server.cpp  rpc_server.h  rpc_service_base.cpp  rpc_service_base.h
src/runtime/grpc/rpc_generator/: rpc_generator.cpp
src/runtime/grpc/ut/: CMakeLists.txt  cancellation.cpp  rpc.cpp  test_service.proto
src/runtime/production/: database.cpp  database.h  logger.cpp  random.cpp  rpc_client_base.cpp  rpc_client_base.h  rpc_server.cpp  rpc_server.h  rpc_service_base.cpp  rpc_service_base.h  time.cpp
src/runtime/production/rpc_generator/: CMakeLists.txt  main.cpp  rpc_generator.cpp  rpc_generator.h
src/runtime/production/ut/: CMakeLists.txt  cancellation.cpp  database.cpp  rpc.cpp
src/runtime/rpc_generator/: CMakeLists.txt  main.cpp  rpc_generator.cpp  rpc_generator.h  util.cpp  util.h
src/runtime/simulator/: CMakeLists.txt  api.cpp  api.h  common.h  database.cpp  database.h  event.cpp  event.h  host.cpp  host.h  logger.cpp  logger.h  random.cpp  rpc_client_base.cpp  rpc_client_base.h  rpc_server.cpp  rpc_server.h  rpc_service_base.cpp  rpc_service_base.h  scheduler.cpp  scheduler.h  time.cpp  world.cpp  world.h
src/runtime/simulator/rpc_generator/: CMakeLists.txt  rpc_generator.cpp  rpc_generator.h
src/runtime/simulator/ut/: CMakeLists.txt  cancellation.cpp  clock.cpp  database.cpp  host_connections.cpp  host_kill.cpp  host_pause.cpp  rpc.cpp  time.cpp
src/runtime/util/: CMakeLists.txt  codegen.cpp  codegen.h  rpc_error.cpp
src/runtime/util/backoff/: CMakeLists.txt  backoff.cpp  backoff.h
src/runtime/util/cancellation/: CMakeLists.txt  stop_callback.h  stop_source.cpp  stop_source.h  stop_state.cpp  stop_state.h  stop_token.cpp  stop_token.h
src/runtime/util/cancellation/ut/: CMakeLists.txt  cancellation.cpp
src/runtime/util/chrono/: CMakeLists.txt  chrono.cpp  chrono.h
src/runtime/util/endpoint/: CMakeLists.txt  endpoint.cpp  endpoint.h
src/runtime/util/event/: CMakeLists.txt  event.cpp  event.h
src/runtime/util/hash/: CMakeLists.txt  md5.cpp  md5.h
src/runtime/util/latch/: CMakeLists.txt  latch.cpp  latch.h
src/runtime/util/parse/: CMakeLists.txt  parse.cpp  parse.h
src/runtime/util/print/: CMakeLists.txt  print.cpp  print.h
src/runtime/util/proto/: CMakeLists.txt  conversion.cpp  conversion.h  proto_conversion.h
src/runtime/util/rpc_error/: CMakeLists.txt  rpc_error.cpp  rpc_error.h
src/runtime/util/serde/: CMakeLists.txt  protobuf_serde.h  serde.h  string_serde.h  u64_serde.h
src/runtime_simulator/: CMakeLists.txt  api.cpp  api.h  common.h  errors.cpp  errors.h  event.cpp  event.h  host.cpp  host.h  rpc_client_base.cpp  rpc_client_base.h  rpc_server.cpp  rpc_server.h  rpc_service_base.cpp  rpc_service_base.h  scheduler.cpp  scheduler.h  world.cpp  world.h
src/runtime_simulator/impl/: host.cpp  host.h  scheduler.cpp  scheduler.h  world.cpp  world.h
src/runtime_simulator/rpc_generator/: CMakeLists.txt  rpc_generator.cpp
src/runtime_simulator/ut/: CMakeLists.txt  clock.cpp  rpc.cpp  test_service.proto
(+23 files in other folders)
