add_executable(test_simulator_time time.cpp)
target_link_libraries(test_simulator_time runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_time)

generate_proto(test_simulator_rpc_proto test_service.proto TRUE)

add_executable(test_simulator_rpc rpc.cpp)
target_link_libraries(test_simulator_rpc test_simulator_rpc_proto runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_rpc)

add_executable(test_simulator_cancellation cancellation.cpp)
target_link_libraries(test_simulator_cancellation runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_cancellation)

add_executable(test_simulator_host_pause host_pause.cpp)
target_link_libraries(test_simulator_host_pause test_simulator_rpc_proto runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_host_pause)

add_executable(test_simulator_host_kill host_kill.cpp)
target_link_libraries(test_simulator_host_kill test_simulator_rpc_proto runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_host_kill)

add_executable(test_simulator_host_connections host_connections.cpp)
target_link_libraries(test_simulator_host_connections test_simulator_rpc_proto runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_host_connections)

add_executable(test_simulator_database database.cpp)
target_link_libraries(test_simulator_database runtime_simulator GTest::gtest_main)
gtest_discover_tests(test_simulator_database)
